(test
 (name run_tests)
 (modules
  run_tests
  concurrency_tests
  buffer_manager_tests
  log_manager_tests
  file_manager_tests
  log_record_tests
  execute_query_tests
  transaction_tests
  record_page_tests
  table_manager_tests
  lru_replacer_tests
  test_utils
  parser_tests
  scan_tests)
 (flags
  (-w -69)
  (-w -26))
 (libraries
  threads
  file
  log_manager
  project_scan
  table_scan
  record_page
  transaction
  table_manager
  buffer_manager
  interpreter
  product_scan
  parser
  log_record
  alcotest
  select_scan
  predicate
  constant))
