(test
 (name run_tests)
 (modules
  run_tests
  concurrency_tests
  buffer_manager_tests
  log_manager_tests
  file_manager_tests
  log_record_tests
  transaction_tests
  btree_tests
  record_page_tests
  storage_manager_tests
  table_manager_tests
  lru_replacer_tests
  test_utils
  parser_tests
  scan_tests)
 (flags
  (-w -69)
  (-w -26))
 (libraries
  threads
  file_manager
  log_manager
  storage_manager
  scans
  record_page
  btree
  transaction
  table_manager
  buffer_manager
  parser
  log_record
  alcotest
  constant))
